SO-344: Prevent scrollbars

--- a/scss/components/html5viewer-overrides.scss
+++ b/scss/components/html5viewer-overrides.scss
@@ -25,10 +25,6 @@ body {
   max-height: 100vh !important;
   width: auto !important;
   max-width: 100vw !important;
-
-  @media screen and (max-aspect-ratio: 600/688) {
-    max-height: none !important;
-  }
 }
 
 .animatePhoto,
